<resources>
    <string name="app_name">Merchant</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_auth">AuthActivity</string>

    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="login">login</string>
    <string name="register">register</string>

    <string name="action_settings">Settings</string>
    <string name="action_business_string">My Business</string>
    <string name="action_orders_string">Orders</string>
    <string name="action_sales_string">Sales</string>
    <string name="action_ratings_string">Ratings</string>
    <string name="action_profile_string">Profile</string>
    <string name="navigation_setting_subheader">Preferences</string>
    <string name="action_logout_string">Logout</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="tab_categories">CATEGORIES</string>
    <string name="tab_orders">ORDERS</string>


    <string name="description_dummy">Donec odio magna, blandit vitae dolor tempus, mollis euismod nisi         Etiam blandit vitae turpis hendrerit consequat. Nam mollis quis ligula eget ullamcorper.         Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.         Fusce dignissim gravida ex eu pretium. Quisque eget est in sapien maximus dapibus.         Donec augue ipsum, commodo in leo a, facilisis malesuada sapien.         Pellentesque hendrerit sem purus, vel sodales sem lacinia quis.         Ut at rhoncus purus. Aenean ligula libero, mattis eleifend consequat vulputate, ullamcorper sed est.         Morbi dignissim elementum semper. Nunc suscipit massa finibus leo tincidunt, eget facilisis quam faucibus.         In sollicitudin varius tortor at dictum. Etiam quis leo rutrum, mattis orci ac, dapibus tellus.         Nam eleifend, odio eu pretium porttitor, ligula mi congue massa, suscipit rhoncus turpis felis at ligula.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancell</string>

    <string-array name="unit_names">
        <item>liter</item>
        <item>gram</item>
        <item>kilogram</item>
        <item>watt</item>
        <item>square meter</item>
        <item>meter</item>
        <item>milliliter</item>
        <item>Pack</item>
        <item>piece</item>
        <item>Full</item>
        <item>Half</item>
    </string-array>

    <string name="update">Update</string>
    <string name="missing_fields">Please enter required fields</string>
    <string name="login_wrong_password">Please enter the correct password</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <string name="msg_email_unprovided">Email not provided</string>
    <string name="msg_address_unprovided">Address not provided</string>
    <string name="order_status_update_success">Order Status Updated Successful</string>
    <string name="order_status_update_failed">Update Failed</string>
    <string name="image_selection_perms_request">Please grant permissions to select image</string>
    <string name="category_name">Category: %s created</string>
    <string name="category_not_created">Category: %s not created</string>
    <string name="product_update_success">Product updated successfully</string>
    <string name="product_update_failure">Product not updated</string>
    <string name="dashboard">dashboard</string>
    <string name="my_business">My Business</string>
    <string name="category_label">Categories</string>
    <string name="order_label">Orders</string>
    <string name="order_item_label">Order Item</string>
    <string name="new_product_label">New Product</string>
    <string name="edit_product_label">Edit Product</string>
    <string name="products_label">Products</string>
    <string name="permision_to_call_msg">Please grant permission to call</string>
    <string name="ksh_label_with_value_str">Ksh  %s</string>
    <string name="ksh_label_with_value_num">Ksh  %d</string>
    <string name="items_label_with_value_num">items (%d)</string>
    <string name="add_product">Add Product</string>
    <string name="product_successfuly_deleted">Product successfully deleted</string>
    <string name="product_could_not_be_deleted">Product Could not be deleted</string>
    <string name="product_image">Product image</string>
    <string name="price_label">Price</string>
    <string name="items_in_stock_label">No. of items in Stock</string>
    <string name="add_images">Upload images</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="unit_label">Unit</string>
    <string name="grant_permissions_gallery_msg">Please grant permissions to select image</string>
    <string name="product_successfully_added">Product added successfully</string>
    <string name="product_not_added">Product not added</string>
    <string name="quantity_label">Quantity</string>
    <string name="create_category">Create Category</string>
    <string name="create_category_hint">e.g Fruits</string>
    <string name="sign_in_with_google">Sign in with Google</string>

</resources>
