<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.dash.fragments.NewProductFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/new_product_ncview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/new_product_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/viewA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white">

                <com.meetic.shuffle.Shuffle
                    android:id="@+id/new_product_shuffle"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:shuffle_infinite="true" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="10dp"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_product_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title_label" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_product_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_label" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_product_quantity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/quatity_label"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <Spinner
                            android:id="@+id/input_product_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="1"
                            android:entries="@array/unit_names"
                            android:hint="@string/unit_label"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white" />


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_product_pricing"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/price_label"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_product_stock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/items_in_stock_label"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/viewC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="10dp"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancell"
                        style="@style/Widget.Button.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_prefered_height"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cancel" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save"
                        style="@style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_prefered_height"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/save" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:clickable="true"
        android:contentDescription="@string/add_images"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/camera_vector" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

