<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/TextLabel"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rowland.delivery.features.auth.ui.AuthActivity"
    tools:showIn="@layout/activity_auth">

    <include
        android:id="@+id/logo_layout"
        layout="@layout/content_logo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="80dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/logo_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinput_layout"
            style="@style/Widget.TextInputLayout.Auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logo_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passord_textinput_layout"
            style="@style/Widget.TextInputLayout.Auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/custom_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.Button.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_prefered_height"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_prefered_height"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/register" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="sans-serif"
                android:text="Forgotten your login details?"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:fontFamily="sans-serif"
                android:text="Reset Password."
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <include
                android:id="@+id/or_layout"
                layout="@layout/content_auth_footer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_google_login"
                style="@style/Widget.Button.Inverse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_prefered_height"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Sign in with Google" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
